--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library of utility functions",
   "main": "index.ts",
   "scripts": {
-    "f-generate-scss": "npx ts-node src/generateScssVariables.ts",
+    "f-generate-scss": "npx ts-node src/generateVariables.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
